# ai_agent_tutorial

./: .gitignore  ADVANCED_AGENT_INSTRUMENTATION.md  DOCKER_ARCHITECTURE.drawio  DOCKER_ARCHITECTURE.md  FAN_OUT_TOOL_EXECUTION_FIX.md  MONITORING_QUICK_REF.md  MONITORING_SUMMARY.md  MONITORING_TEST_PROMPTS.md  PROMETHEUS_GRAFANA_GUIDE.md
.github/: copilot-instructions.md
10_cost_optimization/: .env.example  .gitignore  ARCHITECTURE.md  BAD_VERSION_GUIDE.md  FEATURE_COMPLETE.md  GRAFANA_TEST_PROMPTS.md  README.md  VISUAL_SUMMARY.txt  docker-compose.yml  examples_benchmark.sh  fix_grafana_metrics.sh  requirements.txt  start.sh  test.sh  test_benchmark.py  test_benchmark.sh
10_cost_optimization/app/: __init__.py  config.py  logging_conf.py  main.py
10_cost_optimization/docker/: Dockerfile  entrypoint.sh
10_cost_optimization/docs/: ARCHITECTURE_DIAGRAM.md  BENCHMARK_FEATURE.md  GRAFANA_TROUBLESHOOTING.md  IMPLEMENTATION_SUMMARY.md  JAVITASOK_RESZLETESEN.md  QUICK_REFERENCE.md  README.md  TESTING_CHECKLIST.md  VALIDATION_REPORT.md
10_cost_optimization/prometheus/: prometheus.yml
10_cost_optimization/prompts/: reasoning_prompt.txt  summary_prompt.txt  triage_prompt.txt
13_multiagent/: .env.example  .gitignore  QUICKSTART.md  README.md  docker-compose.yml
13_multiagent/backend/: Dockerfile  pyproject.toml
13_multiagent/backend/app/: main.py
13_multiagent/backend/app/application/orchestration/: graph_factory.py
13_multiagent/backend/app/application/orchestration/patterns/: custom_workflow.py  handoffs.py  router.py  skills.py  subagents.py
13_multiagent/backend/app/application/usecases/: chat_stream.py
13_multiagent/backend/app/core/: config.py  logging.py
13_multiagent/backend/app/domain/: events.py  policies.py  state.py  ticket.py
13_multiagent/backend/app/infrastructure/cache/: memory_cache.py
13_multiagent/backend/app/infrastructure/llm/: base.py  openai_provider.py
13_multiagent/backend/app/infrastructure/tools/: customer_tool.py  kb_tool.py  ticketing_tool.py
13_multiagent/backend/app/presentation/api/: http_routes.py  ws_chat.py
13_multiagent/documents/: multi-agent-mintak.md  tesztesetek.md
13_multiagent/frontend/: package.json
ai_agent_complex/: docker-compose.yml  verify-monitoring.sh
ai_agent_complex/backend/: requirements.txt
ai_agent_complex/docs/: 09_ARCHITECTURE_DIAGRAM.drawio  09_MONITORING_PROMPT.md  09_PROMETHEUS_GRAFANA_UTMUTATO.md  ARCHITECTURE_DIAGRAM_MCP_LANGGRAPH.drawio  DELTA_PROMPT_LESSON_8.md  LANGGRAPH_MULTI_TOOL_FLOW.drawio  LANGGRAPH_NODES_HU.md  PROMPTS.md
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/: .env.example  pyproject.toml
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/docker/: Dockerfile  Dockerfile.dev
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/docs/: ARCHITECTURE.md  TESTING.md  WORKFLOW_DIAGRAM.md
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/scripts/: seed_qdrant.py
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/src/: __init__.py
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/src/models/: rag.py  state.py
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/src/nodes/: __init__.py  draft_answer.py  policy_check.py  triage_classify.py
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/src/services/: __init__.py  cache_service.py  llm_service.py  qdrant_service.py
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/src/workflow/: __init__.py
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/tests/: response_1767556420858.json
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/tests/integration/: test_api.py
ai_agent_complex/mini_projects/keil.gyozo/SupportAI/tests/unit/test_nodes/: __init__.py
ai_agent_complex/observability/: CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md  prometheus.yml
backend/: Dockerfile  main.py
backend/domain/: interfaces.py
backend/infrastructure/: tool_clients.py
backend/observability/: llm_instrumentation.py  prompt_lineage.py
backend/services/: agent.py  agent_toolnode.py  chat_service.py  tools.py  tools_langchain.py
docs/: ARCHITECTURE_DIAGRAM.drawio  LANGGRAPH_MULTI_TOOL_FLOW.drawio  MCP_SZERVER_HASZNALAT.md  STOCK_PRICE_FIX.md
documentation/: MINI_PROJECTS.md
mini_projects/andras.szanyi/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
mini_projects/andras.szanyi/src/: container.py
mini_projects/andras.szanyi/src/application/: nodes.py
mini_projects/andras.szanyi/src/domain/: interfaces.py
mini_projects/andras.szanyi/src/infrastructure/: config.py  external.py  llm.py
mini_projects/andras.szanyi/tests/: test_application.py  test_infrastructure.py  test_services.py
mini_projects/benke.tibor/: .env.example  README.md  docker-compose.yml
mini_projects/csorsz.adam/: .gitignore  notes.txt  requirements.txt  run_agent.py
mini_projects/ferenc.kakas/: homework-01.py
mini_projects/gabor.toth/: .env  .gitignore
observability/: .env.example  MONITORING_IMPLEMENTATION.md  QUICK_REFERENCE.md  docker-compose.yml  start.sh
vector_embeddings/: Dockerfile  IMPLEMENTATION_CHECKLIST.md  RAG_IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  rag_demo.sh  test_rag.py
(+433 files in other folders)
