[project]
name = "python-ai-agent"
version = "0.1.0"
description = "A production-grade Python project using LangGraph and Groq with Clean Architecture."
dependencies = [
    "langchain-groq",
    "langgraph",
    "python-dotenv",
    "pydantic-settings",
    "pydantic",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

# 1. Formatting options go here now
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# 2. Linting rules (select, ignore, fixable) go here
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "N",  # pep8-naming
    "RUF", # ruff specific rules
    "PIE", # flake8-pie
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PL", # pylint
    "TRY", # tryceratops
    "ERA", # eradicate
    "PERF", # perflint
    "PGH", # pygrep-hooks
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "INT", # flake8-gettext
    "ARG", # flake8-unused-arguments
    "NPY", # numpy
    "PD", # pandas-vet
]
ignore = [
    "ANN101", # Missing type annotation for self in method
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
]

[tool.ruff.isort]
known-first-party = ["src"]
force-single-line = false
case-sensitive = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true
warn_required_dynamic_aliases = true

