[tool.poetry]
name = "supportai"
version = "0.1.0"
description = "AI-powered customer support triage and response agent"
authors = ["SupportAI Team <team@supportai.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# LangChain ecosystem
langchain = "^0.3.0"
langgraph = "^0.2.0"
langchain-openai = "^0.2.0"

# Vector DB - IMPORTANT: version compatibility!
qdrant-client = "~1.13.0"  # Server must be v1.12.x - v1.14.x

# Embeddings - explicit to avoid conflicts
tiktoken = "^0.8.0"

# API
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pydantic = {version = "^2.9.0", extras = ["email"]}  # Include email-validator for EmailStr
pydantic-settings = "^2.5.0"

# Caching
redis = "^5.0.0"

# HTTP
httpx = "^0.27.0"

# Utils
python-dotenv = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"  # Parallel execution
httpx = "^0.27.0"  # Async HTTP testing
factory-boy = "^3.3.0"  # Test factories
faker = "^22.0.0"  # Fake data generation
respx = "^0.20.0"  # Mock HTTP requests
testcontainers = "^4.0.0"  # Docker containers for tests

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.11.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-fail-under=80"
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (require external services)",
    "e2e: End-to-end tests (full workflow)",
    "slow: Slow running tests"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
